tests/baselines/reference/commaOperatorInvalidAssignmentType(strict=true).errors.txt
commaOperatorInvalidAssignmentType.ts(10,1): error TS2322: Type 'string' is not assignable to type 'boolean'.
commaOperatorInvalidAssignmentType.ts(10,20): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(10,29): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(11,1): error TS2322: Type 'number' is not assignable to type 'boolean'.
commaOperatorInvalidAssignmentType.ts(11,20): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(11,29): error TS2454: Variable 'NUMBER' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(13,1): error TS2322: Type 'boolean' is not assignable to type 'number'.
commaOperatorInvalidAssignmentType.ts(13,19): error TS2454: Variable 'NUMBER' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(13,27): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(14,1): error TS2322: Type 'string' is not assignable to type 'number'.
commaOperatorInvalidAssignmentType.ts(14,19): error TS2454: Variable 'NUMBER' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(14,27): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(16,1): error TS2322: Type 'boolean' is not assignable to type 'string'.
commaOperatorInvalidAssignmentType.ts(16,19): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(16,27): error TS2454: Variable 'BOOLEAN' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(17,1): error TS2322: Type 'number' is not assignable to type 'string'.
commaOperatorInvalidAssignmentType.ts(17,19): error TS2454: Variable 'STRING' is used before being assigned.
commaOperatorInvalidAssignmentType.ts(17,27): error TS2454: Variable 'NUMBER' is used before being assigned.


==== commaOperatorInvalidAssignmentType.ts (18 errors) ====
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    
    var resultIsBoolean: boolean
    var resultIsNumber: number
    var resultIsString: string
    
    //Expect errors when the results type is different form the second operand
    resultIsBoolean = (BOOLEAN, STRING);
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.
                       ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
                                ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    resultIsBoolean = (BOOLEAN, NUMBER);
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
                       ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
                                ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    
    resultIsNumber = (NUMBER, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
                      ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
                              ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    resultIsNumber = (NUMBER, STRING);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
                      ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
                              ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
    
    resultIsString = (STRING, BOOLEAN);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
                      ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
                              ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    resultIsString = (STRING, NUMBER);
    ~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                      ~~~~~~
!!! error TS2454: Variable 'STRING' is used before being assigned.
                              ~~~~~~
!!! error TS2454: Variable 'NUMBER' is used before being assigned.
    